--- a/SinglePHP/index.html
+++ b/SinglePHP/index.html
@@ -44,11 +44,11 @@
     <p class="lead">单文件PHP框架，羽量级网站开发首选</p>
     <blockquote>
 <p>本项目由<a href='http://leo108.com' target='_blank'>leo108</a>开发，遵循GPLv2协议。</p>
-    <p>当前文档更新日期为：2014年3月19日</p>
+    <p>当前文档更新日期为：2014年3月25日</p>
     </blockquote>
     <p>
       <a href="https://github.com/leo108/SinglePHP" target='_blank' class="btn btn-outline-inverse btn-lg" >Fork On Github</a>
-      <a href="./index.php?a=start" class="btn btn-outline-inverse btn-lg">开始看文档</a>
+      <a href="./start.html" class="btn btn-outline-inverse btn-lg">开始看文档</a>
     </p>
   </div>
 </main>
@@ -57,5 +57,9 @@
 <script src="http://cdn.bootcss.com/highlight.js/7.3/highlight.min.js"></script>
 <script >hljs.initHighlightingOnLoad();</script>
 <script src="http://v3.bootcss.com/docs-assets/js/application.js"></script>
+  <script type="text/javascript">
+      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+      document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F87e90f311d6eafe1e1c02963e3aaeef2' type='text/javascript'%3E%3C/script%3E"));
+  </script>
 </body>
 </html>
