--- a/SinglePHP/doc.html
+++ b/SinglePHP/doc.html
@@ -26,7 +26,7 @@
         <li>
           <a href="./start.html">简介</a>
         </li>
-        <li>
+        <li class="active">
           <a href="./doc.html">详细文档</a>
         </li>
       </ul>
