--- a/SinglePHP/index.html
+++ b/SinglePHP/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="leo108">
-    <title>Welcome</title>
+    <title>SinglePHP - 单文件PHP框架</title>
     <meta name="description" content="SinglePHP" />
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://v3.bootcss.com/docs-assets/css/docs.css" rel="stylesheet">
@@ -43,7 +43,7 @@
     <h1>SinglePHP</h1>
     <p class="lead">单文件PHP框架，羽量级网站开发首选</p>
     <blockquote>
-<p>本项目由<a href='http://leo108.com' target='_blank'>leo108</a>开发，遵循GPLv2协议。</p>
+    <p>本项目由<a href='http://leo108.com' target='_blank'>leo108</a>开发，遵循MIT协议。</p>
     <p>当前文档更新日期为：2014年3月27日</p>
     </blockquote>
     <p>
