--- a/SinglePHP/start.html
+++ b/SinglePHP/start.html
@@ -23,7 +23,7 @@
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li>
+        <li class="active">
           <a href="./start.html">简介</a>
         </li>
         <li>
