--- a/SinglePHP/en/doc.html
+++ b/SinglePHP/en/doc.html
@@ -26,7 +26,7 @@
         <li>
           <a href="./start.html">Introduce</a>
         </li>
-        <li>
+        <li class="active">
           <a href="./doc.html">Document</a>
         </li>
       </ul>
