--- a/kintpp/index.html
+++ b/kintpp/index.html
@@ -43,8 +43,8 @@
 </header>
 <main class="bs-masthead" id="content" role="main">
   <div class="container">
-    <h1>SinglePHP</h1>
-    <p class="lead">Kint++，加强版的kint，PHP调试利器</p>
+    <h1>Kint++</h1>
+    <p class="lead">加强版的kint，PHP调试利器</p>
     <blockquote>
     <p>本项目由<a href='http://leo108.com' target='_blank'>leo108</a>开发，遵循MIT协议。</p>
     <p>当前文档更新日期为：2014年6月11日</p>
